--- a/index.html
+++ b/index.html
@@ -67,10 +67,90 @@
     <div class="bg-text container">
         <h1>CODE. DEPLOY. REPLICATE</h1>
     </div>
+    <section id="mis-proyectos">
+        <section class="container custom-section">
+            <div class="row">
+                <div class="col-md" data-aos="fade-up" data-aos-offset="500" data-aos-duration="500">
+                    <img src="imagenes/cuatro en linea.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="cb col-md">
+                    <p class="card-text">
+                        En el desarrollo de mi proyecto de Cuatro en Línea, he puesto un enfoque especial en la robustez
+                        de las pruebas unitarias y de integración para asegurar un juego completamente funcional y sin
+                        errores. Además, he invertido tiempo en mejorar la interfaz gráfica del juego, haciendo hincapié
+                        en la estética y la experiencia del usuario. He documentado minuciosamente el código y las
+                        funcionalidades del juego para facilitar su comprensión y mantenimiento, siguiendo principios de
+                        modularidad y buenas prácticas de programación. Mi objetivo principal es alcanzar una
+                        calificación sobresaliente al superar el 60% de las pruebas y ofrecer un juego que no solo
+                        cumpla con los requisitos, sino que también resulte visualmente atractivo y altamente intuitivo
+                        para los usuarios.
+                    </p>
+                    <a target="_blank" href="https://github.com/fcongedo/tp-cuatro-en-linea-ayp1/tree/master/tp-cuatro-en-linea"><i
+                            class="fa fa-github"> </i> Ver
+                        github</a>
+                </div>
+            </div>
+        </section>
+        <section class="container custom-section">
+            <div class="row">
+                <div class="cb col-md">
+                    <p class="card-text">
+                        Este cuatrimestre, estamos desarrollando un Sistema de Gestión de Tareas (SGT) que permite
+                        crear, modificar y eliminar tareas con nombre, duración en horas decimales, prioridad (alta o
+                        baja), subtareas, y estado (completa, pendiente, en progreso o interrumpida). Además, las tareas
+                        pueden tener etiquetas personalizadas. El SGT permite la gestión de subtareas y actualización
+                        del estado de tareas y subtareas. La duración estimada de una tarea se calcula sumando las
+                        duraciones de sus subtareas. El sistema permite la gestión de interrupciones y la reanudación de
+                        tareas interrumpidas. También ofrece consultas que sugieren tareas basadas en el tiempo total o
+                        etiquetas, así como la capacidad de reordenar tareas principales por prioridad, duración o
+                        cantidad de subtareas. Además, se admite la búsqueda de tareas por palabras clave,
+                        proporcionando una solución integral para la gestión eficiente de tareas y la mejora de la
+                        productividad..
+                    </p>
+                </div>
+                <div class="col-md" data-aos="fade-up" data-aos-offset="600" data-aos-duration="500">
+                    <img src="imagenes/sgt.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="container custom-section">
+            <div class="row">
+                <div class="col-md" data-aos="fade-up" data-aos-offset="400" data-aos-duration="500">
+                    <img src="imagenes/cardImageLeft.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="cb col-md">
+                    <p class="card-text">
+                        Morbi imperdiet lorem ut ante sagittis, sed sodales est laoreet. Donec ultricies ex justo, sed
+                        dictum nisi commodo non. Morbi feugiat mi sapien, in vestibulum lorem condimentum non.
+                        Suspendisse
+                        vel libero nec neque faucibus sodales. Nullam auctor tempus magna, sed mattis quam pharetra ut.
+                        Duis
+                        pretium tortor lacus, vel maximus mauris cursus quis. Etiam vitae sapien at libero sollicitudin
+                        condimentum nec ut magna. Cras varius tortor auctor dolor laoreet, quis ullamcorper massa
+                        aliquam.
+                        Donec vulputate dolor sed metus posuere, in mattis odio pellentesque. Quisque lacus erat,
+                        consectetur a maximus quis, volutpat sit amet mi. Class aptent taciti sociosqu ad litora
+                        torquent
+                        per conubia nostra, per inceptos himenaeos. Etiam eu dui purus. Cras vel lacus tristique,
+                        rhoncus
+                        augue et, porttitor eros. Sed ullamcorper orci non dui aliquam, nec tincidunt magna tempor.
+                        Vestibulum non diam pellentesque nisl finibus semper in pharetra leo. Integer congue ante elit,
+                        vitae sodales lectus ullamcorper eu.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </section>
     <!-- Pie de página -->
     <footer>
         <p>@copy 2023 - Todos los derechos reservados fcongedo</p>
         <!-- Enlaces a redes sociales -->
+        <div class="redes">
+            <a href="https://github.com/fcongedo" target="_blank"><i class="fa-brands fa-github icono-mediano"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter icono-mediano"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-instagram icono-mediano"></i></a>
+            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in icono-mediano"></i></a>
+        </div>
     </footer>
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
