<p> en footer centrado

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik+Mono+One&display=swap" rel="stylesheet">
 
     <!-- Título de la página -->
-    <title>Mi Primer Portfolio</title>
+    <title>Mi portfolio</title>
 </head>
 
 <body>
@@ -143,7 +143,9 @@
     </section>
     <!-- Pie de página -->
     <footer>
+        <div class ="center text">
         <p>@copy 2023 - Todos los derechos reservados fcongedo</p>
+        </div>
         <!-- Enlaces a redes sociales -->
         <div class="redes">
             <a href="https://github.com/fcongedo" target="_blank"><i class="fa-brands fa-github icono-mediano"></i></a>
