--- a/contacto.html
+++ b/contacto.html
@@ -61,6 +61,18 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <footer>
+        <div class ="center text">
+        <p>@copy 2023 - Todos los derechos reservados fcongedo</p>
+        </div>
+        <!-- Enlaces a redes sociales -->
+        <div class="redes">
+            <a href="https://github.com/fcongedo" target="_blank"><i class="fa-brands fa-github icono-mediano"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter icono-mediano"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-instagram icono-mediano"></i></a>
+            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in icono-mediano"></i></a>
+        </div>
+    </footer>
 
 <body>
 
