Redes actualizado en index

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         <!-- Enlaces a redes sociales -->
         <div class="redes">
             <a href="https://github.com/fcongedo" target="_blank"><i class="fa-brands fa-github icono-mediano"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter icono-mediano"></i></a>
-            <a href="https://instagram.com"><i class="fa-brands fa-instagram icono-mediano"></i></a>
-            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in icono-mediano"></i></a>
+            <a href="https://twitter.com/fcongedo92" target="_blank"><i class="fa-brands fa-x-twitter icono-mediano"></i></a>
+            <a href="https://www.instagram.com/f.congedo/"><i class="fa-brands fa-instagram icono-mediano"></i></a>
+            <a href="https://www.linkedin.com/in/fcongedo/"><i class="fa-brands fa-linkedin-in icono-mediano"></i></a>
         </div>
     </footer>
 </body>
